[package]
name = "stream-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
crossbeam = "0.8.4"
jiff = "0.2.13"
