[package]
name = "stream-downloader"
version = "0.2.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
crossbeam = "0.8.4"
jiff = "0.2.13"
nix = { version = "0.30.1", features = ["signal"] }
env_logger = "0.11.8"
log = "0.4.27"
figment = { version = "0.10.19", features = ["toml", "env"] }
